--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "-": "0.0.1",
     "@types/styled-components": "^5.1.4",
     "D": "^1.0.0",
+    "axios": "^0.20.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
