--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "D": "^1.0.0",
     "axios": "^0.20.0",
     "next": "9.5.5",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-hook-form": "^6.9.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
+    "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "babel-eslint": "^10.1.0",
